--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "mocha": "^2.4.5"
   }
 }
