--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
-    "chroma": "0.0.1",
+    "chroma-js": "^1.1.1",
     "codecov": "^1.0.1",
     "d3": "^3.5.16",
     "express": "^4.13.4",
