Add serve script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test --recursive"
+    "test": "mocha test --recursive",
+    "serve": "python -m SimpleHTTPServer 8888",
+
   },
   "keywords": [
     "d3",
