--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
   - sudo dpkg -i google-chrome*.deb
   - npm install -g gulp
+  - npm install --save-dev gulp
 script: gulp
 before_install:
   - sudo pip install codecov
